<resources>
    <string name="app_name">Proyecto AR</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_creditos">Creditos</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="button_show_dialog">Mostrar Dialogo</string>

    <string name="bienvenida">
        MediAR es un aplicación móvil con carácter médico-eduacativo que busca apoyarte a ti
        estudiante de medicina, en la identificación de enfermedades y condiciones que afecten la
        facie de una persona mediante el uso de filtros faciales que te permitan observar diferentes
        tipos de condiciones y/o enfermedades aplicadas a ti mismo o a otra persona
    </string>
    <string name="entendido">Entendido</string>
    <string name="after_dialog">Bienvenido</string>
    
    <string name="lorem_ipsum_short">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
    </string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="info_title">Ictericia</string>

    <string name="title_credits">Créditos</string>
    <string name="subtitle_idea_credits">Idea Original</string>
    <string name="idea_owner_credits">Dra. E. Mahuina Campos Castolo</string>
    <string name="subtitle_devs_credits">Desarrolladores</string>
    <string name="devs_names">
        Gutiérrez Medina Sebastián Alejandro\n
        Cervantes López Aarón\n
        Ricardo Emiliano Apodaca Cardiel
    </string>
    <string name="lupus">Enfermedad crónica y autoinmune que puede afectar múltiples órganos
        y sistemas del cuerpo. El sistema inmunológico del cuerpo, que normalmente protege
        contra sustancias extrañas y enfermedades, se vuelve hiperactivo y ataca erróneamente
        tejidos sanos.\n\n
        Existen diferentes formas de lupus, pero el más común es el lupus
        eritematoso sistémico (LES). Algunos de los síntomas más frecuentes del LES incluyen
        fatiga, dolor en las articulaciones, inflamación de las articulaciones, erupciones
        cutáneas en forma de mariposa en el rostro, fiebre, pérdida de cabello, úlceras bucales
        y sensibilidad al sol. También puede afectar órganos internos como el corazón, los riñones,
        los pulmones y el cerebro.
    </string>
    <string name="ictericia">La ictericia es una condición médica caracterizada por la coloración
        amarillenta de la piel, las mucosas (como los ojos) y otros tejidos del cuerpo.
        Esta coloración amarilla es causada por un exceso de bilirrubina, un pigmento de color
        amarillo que se produce como resultado de la descomposición de los glóbulos rojos en el
        cuerpo.\n\n
        La bilirrubina es normalmente procesada por el hígado y luego excretada en la bilis,
        que es un líquido producido por el hígado y almacenado en la vesícula biliar. Sin embargo,
        cuando hay un problema en el proceso de metabolismo o excreción de la bilirrubina,
        puede acumularse en el cuerpo, lo que resulta en la ictericia.
    </string>
</resources>