<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Creditos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/popupMenu"
                    android:layout_width="56dp"
                    android:layout_height="52dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/menu"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/title_creditos"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/title_credits"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/logo_unam_creditos"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:contentDescription="logo_unam"
                app:srcCompat="@drawable/logo_unam" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/subtitle_idea_credits"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/idea_owner_credits"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/subtitle_devs_credits"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/devs_names"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>