<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Informacion">

    <ScrollView
        android:id="@+id/information_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/information_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/info_title"/>

            <TextView
                android:id="@+id/filter_info"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/information_title"
                app:layout_constraintEnd_toEndOf="@+id/filter_info_image"
                android:text="@string/lorem_ipsum_short"/>

            <ImageView
                android:id="@+id/filter_info_image"
                android:layout_width="200dp"
                android:layout_height="400dp"
                app:layout_constraintTop_toBottomOf="@id/information_title"
                app:layout_constraintStart_toEndOf="@+id/filter_info"
                android:src="@drawable/logo_unam"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/filter_info"
                android:text="@string/lorem_ipsum"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>